--- a/static/css/components/Footer.less
+++ b/static/css/components/Footer.less
@@ -26,6 +26,9 @@
 
   // Position
   float : right;
+
+  // Text
+  white-space : nowrap;
 }
 
 
